fix item name letter spacing

--- a/ui/scss/core/components/gear_picker/_gear_picker.scss
+++ b/ui/scss/core/components/gear_picker/_gear_picker.scss
@@ -73,7 +73,7 @@
 		flex-direction: column;
 		align-items: flex-start;
 
-		.item-picker-name-container,
+		.item-picker-name-container *,
 		.item-picker-reforge,
 		.item-picker-enchant {
 			letter-spacing: normal;
